--- a/Mortal Kombat 4.html
+++ b/Mortal Kombat 4.html
@@ -8,8 +8,8 @@
         </div>
         <script>
             EJS_player = "#game";
-            EJS_core = "n64";
-            EJS_gameName = "Mario Kart 64";
+            EJS_core = "mupen64plus";
+            EJS_gameName = "Mortal Kombat 4 - AlagoaRetroGames";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "https://raw.githack.com/Alagoa123/N64-AlagoaRetroGames/main";
