--- a/007 - The World is Not Enough.html
+++ b/007 - The World is Not Enough.html
@@ -8,11 +8,11 @@
         </div>
         <script>
             EJS_player = "#game";
-            EJS_core = "n64";
-            EJS_gameName = "Decathlon";
+            EJS_core = "mupen64plus";
+            EJS_gameName = "Mortal Kombat 4 - AlagoaRetroGames";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
-            EJS_pathtodata = "https://raw.githack.com/Alagoa123/Atari2600/main";
+            EJS_pathtodata = "https://raw.githack.com/Alagoa123/N64-AlagoaRetroGames/main";
             EJS_gameUrl = "https://archive.org/download/nintendo-64-romset-usa/007%20-%20The%20World%20is%20Not%20Enough%20%28U%29%20%5B%21%5D.zip/007%20-%20The%20World%20is%20Not%20Enough%20%28U%29%20%5B%21%5D.z64";
         </script>
         <script src="https://www.emulatorjs.com/loader.js"></script>
